panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_global_scope__test_error_declaration_without_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_error_declaration_without_type.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: declaration does not specify a type
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_declaration_without_type.c:1:1]
   │
 1 │ const a;
   │ ──┬──  
   │   ╰──── type missing
───╯

Error: declaration does not specify a type
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_declaration_without_type.c:2:1]
   │
 2 │ volatile* b;
   │ ────┬───  
   │     ╰───── type missing
───╯

Error: declaration does not specify a type
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_declaration_without_type.c:3:1]
   │
 3 │ const* const c;
   │ ──┬──  
   │   ╰──── type missing
───╯
